--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "src/main.tx",
+            "src": "src/main.ts",
             "use": "@vercel/node"
         }
     ],
